--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -12,8 +12,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^7.3.0",
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
+    "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
@@ -28,15 +30,14 @@
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-cookies": "^1.0.12",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.5.12",
+    "rxjs-compat": "^6.4.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "^1.0.0-beta.22-1",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -48,6 +49,7 @@
     "protractor": "^5.4.2",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "typescript": "~2.0.3",
+    "angular-cli": "1.0.0-beta.28.3"
   }
 }
